<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#33CC66"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="350sp"
            android:layout_height="350sp"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/logo" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="800dp"
        android:gravity="center"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/botonsandwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorButton"
            android:text="@string/botonsandwitch"
            android:onClick="nosotrossandwitch"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="950dp"
        android:gravity="center"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/botonsobrenosotros"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorButton"
            android:text="@string/botonsobrenosotros"
            android:onClick="nosotrosabrir"
            android:textStyle="bold" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>